# watt-etw

./: .gitignore  CLAUDE.md  README.md  backtest_day.py  econ.json  econ2.json  exported.csv  opt_out.json  predict_day.py  pyproject.toml  train_forecaster.py  validate_out.json
2025_DAM_data/: 20250103_EL-DAM_ResultsSummary_EN_v01.xlsx  20250104_EL-DAM_ResultsSummary_EN_v01.xlsx  20250105_EL-DAM_ResultsSummary_EN_v01.xlsx  20250106_EL-DAM_ResultsSummary_EN_v01.xlsx  20250108_EL-DAM_ResultsSummary_EN_v01.xlsx  20250112_EL-DAM_ResultsSummary_EN_v01.xlsx  20250113_EL-DAM_ResultsSummary_EN_v01.xlsx  20250116_EL-DAM_ResultsSummary_EN_v01.xlsx  20250117_EL-DAM_ResultsSummary_EN_v01.xlsx  20250121_EL-DAM_ResultsSummary_EN_v01.xlsx  20250128_EL-DAM_ResultsSummary_EN_v01.xlsx  20250130_EL-DAM_ResultsSummary_EN_v01.xlsx  20250202_EL-DAM_ResultsSummary_EN_v01.xlsx  20250203_EL-DAM_ResultsSummary_EN_v01.xlsx  20250204_EL-DAM_ResultsSummary_EN_v01.xlsx  20250207_EL-DAM_ResultsSummary_EN_v01.xlsx  20250209_EL-DAM_ResultsSummary_EN_v01.xlsx  20250212_EL-DAM_ResultsSummary_EN_v01.xlsx  20250216_EL-DAM_ResultsSummary_EN_v01.xlsx  20250219_EL-DAM_ResultsSummary_EN_v01.xlsx  20250222_EL-DAM_ResultsSummary_EN_v01.xlsx  20250223_EL-DAM_ResultsSummary_EN_v01.xlsx  20250225_EL-DAM_ResultsSummary_EN_v01.xlsx  20250226_EL-DAM_ResultsSummary_EN_v01.xlsx  20250311_EL-DAM_ResultsSummary_EN_v01.xlsx  20250317_EL-DAM_ResultsSummary_EN_v01.xlsx  20250319_EL-DAM_ResultsSummary_EN_v01.xlsx  20250327_EL-DAM_ResultsSummary_EN_v01.xlsx  20250401_EL-DAM_ResultsSummary_EN_v01.xlsx  20250402_EL-DAM_ResultsSummary_EN_v01.xlsx  20250405_EL-DAM_ResultsSummary_EN_v01.xlsx  20250415_EL-DAM_ResultsSummary_EN_v01.xlsx  20250417_EL-DAM_ResultsSummary_EN_v01.xlsx  20250418_EL-DAM_ResultsSummary_EN_v01.xlsx  20250419_EL-DAM_ResultsSummary_EN_v01.xlsx  20250425_EL-DAM_ResultsSummary_EN_v01.xlsx  20250429_EL-DAM_ResultsSummary_EN_v01.xlsx  20250502_EL-DAM_ResultsSummary_EN_v01.xlsx  20250512_EL-DAM_ResultsSummary_EN_v01.xlsx  20250514_EL-DAM_ResultsSummary_EN_v01.xlsx  (+77 more)
docs/: challenge_brief.md  forecasting_and_optimization_report.md
frontend/: index.html  package-lock.json  package.json
model_mock/: RUN_AMPL.md  battery_qa.mod  battery_qa.run
tests/: test_api.py  test_battery_fleet.py  test_carbon_fetcher.py  (+5 more)
(+679 files in other folders)
