[project]
name = "watt-etw"
version = "0.1.0"
description = "Battery fleet optimization MVP for HEnEx day-ahead market data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pandas>=2.0",
    "python-multipart>=0.0.9",
    "requests>=2.31",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]
forecasting = [
    "lightgbm>=4.0",
    "yfinance>=0.2.40",
    "holidays>=0.50",
    "pyarrow>=15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["watt_etw*"]
