[project]
name = "watt-etw"
version = "0.1.0"
description = "Battery fleet optimization MVP for HEnEx day-ahead market data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API server
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "requests>=2.31",
    # ML
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "holidays>=0.40",
    # Optimisation
    "pulp>=2.8",
    # Optional: TTF fallback
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["watt_etw*"]
